# camera-modulation

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  diagram.excalidraw  main.py  pyproject.toml
docs/: Gost R 7.0.100 2018.csl  README.md  bibliography.bib  gost.csl  main.typ
docs/addons/: bib_count.typ  cyrillic_enum.typ  tables.typ  variables.typ
docs/chapters/: introduction.typ  заключение.typ  список_литературы.typ  теория.typ  титульный_лист.typ
docs/word/: титульник.docx
draft/: README.md  lib.py  models.py
draft/01_spectral_axis/: example.py  output.txt
draft/02_scene/: example.py
draft/03_optics/: example.py  output.txt
draft/04_sensor/: example.py
draft/05_adc/: example.py
draft/06_reconstruction_export/: example.py
draft/07_full_pipeline/: main.py
draft/07_full_pipeline/outputs/: report.txt
specs/: README.md  architecture.md  data-model.md  mvp-roadmap.md  spectrometer-integration.md  team-plan.md  vision.md
streamlit_app/: README.md  app.py  sample_spectrum.csv
workspace/: README.md  __init__.py  main.py  models.py  shared.py
workspace/input/: greenMeasure.txt  scarlet_spectrum.csv
workspace/optics/: __init__.py  optics_transformer.py  stubs.py
workspace/outputs/: workspace_report.txt
workspace/scene_source/: __init__.py  explanation.ipynb  scene_models.py  stubs.py
workspace/sensor_adc/: __init__.py  sensor_pipeline.py  stubs.py
workspace/visualization/: __init__.py  stubs.py  verifier.py  visualization.py
