[project]
name = "camera-modulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.4",
    "pandas>=3.0",
    "plotly>=6.7.0",
    "streamlit>=1.57",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]
